Fix: Un-hardcoded FRONTEND_URL and updated CORS for production